@@ -43,17 +43,18 @@ $VERSION = '1.6';
     359     => 'BG', 36      => 'HU', 370     => 'LT', 371     => 'LV',
     372     => 'EE', 373     => 'MD', 374     => 'AM', 375     => 'BY',
     376     => 'AD', 377     => 'MC',
-    37744   => 'KOS', # from http://en.wikipedia.org/wiki/List_of_country_calling_codes#At_a_glance
-    37745   => 'KOS',
-    38128   => 'KOS',
-    38129   => 'KOS',
-    38138   => 'KOS',
-    38139   => 'KOS',
-    38643   => 'KOS',
-    38649   => 'KOS',
+    37744   => 'XK', # from http://en.wikipedia.org/wiki/List_of_country_calling_codes#At_a_glance
+    37745   => 'XK',
+    38128   => 'XK',
+    38129   => 'XK',
+    38138   => 'XK',
+    38139   => 'XK',
+    38643   => 'XK',
+    38649   => 'XK',
     378     => 'SM', 379     => 'VA',
     380     => 'UA', 381     => 'RS',
     382     => 'ME', 385     => 'HR',
+    383     => 'XK',
     386     => 'SI',
     387     => 'BA',
     389     => 'MK', 39      => ['IT', 'VA'], 3966982 => 'VA',
